--- a/IFT604Projet/IFT604Projet/Web.config
+++ b/IFT604Projet/IFT604Projet/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IFT604Projet-20151209094345.mdf;Initial Catalog=aspnet-IFT604Projet-20151209094345;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ProfileDBContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
