Added deployment Database access.

--- a/IFT604Projet/IFT604Projet/Web.config
+++ b/IFT604Projet/IFT604Projet/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IFT604Projet-20151209094345.mdf;Initial Catalog=aspnet-IFT604Projet-20151209094345;Integrated Security=True"
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-IFT604Projet-20151209094345.mdf;Initial Catalog=aspnet-IFT604Projet-20151209094345;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BombSquad;Integrated Security=True;Pooling=False;"
       providerName="System.Data.SqlClient" />
     <add name="MovieDbContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
